# simd-benchmarks

./: .gitmodules  CMakeLists.txt  main.cpp  multiply.cpp
